<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">comicConlocator</string>
    <string name="lbl_service">Iniciar localizador</string>
    <string name="button_start">Iniciar</string>
  

  
    <string name="title_activity_main">MainActivity</string>
 
     
    <string name="play_services_available">Google Play services is available</string>
    
    <string name="pref_sync_frequency">Actualizaciones</string>
    <string name="pref_sync_frequency_summary">Configura la frecuencia</string>
    <string name="pref_user_name">Cosplayer</string>
    <string name="pref_user_name_summary">Introduce tu personaje</string>
    <string name="pref_house_name">Editorial</string>
    <string name="pref_house_name_summary">Introduce la editorial</string>
     
    <string name="pref_user_profile">Perfil de usuario</string>
    <string name="pref_update_setting">Configuracion de actualizaciones</string>
    <string name="menu_settings">Configuración</string>
     <string name="pref_api_url">URL API</string>
     <string name="pref_api_url_summary">http://dominio.com/POST/action</string>
     

</resources>
